<resources>
    <string name="app_name">Carbon Tracker</string>
    <string name="title_activity_carbon_footprint">CarbonFootprintActivity</string>
    <string name="carbon_chart_title">Your Carbon Footprint</string>
    <string name="emptyList">:( No cars in your list. Please add cars below</string>
    <string name="routeInst">Please select the route you took for your journey below or add a new route:</string>
    <string name="add_new_route">ADD NEW ROUTE</string>
    <string name="delete_selected_route">DELETE SELECTED ROUTE</string>
    <string name="use_the_selected_route"> USE THE SELECTED ROUTE</string>
    <string name="routeDetail">Please Fill out the route details below</string>
    <string name="carInst">Please select a car from the list or add a new car by clicking the button below.
    To edit a car in the list, please long click on it.</string>
    <string name="carNameStr">Please enter a name for your car:</string>
    <string name="about">Carbon Tracker helps you track your carbon emissions on your phone. By tracking your
    emissions, you can be a responsible human being.
        \n\nThis app was developed by: \nGroup Khaki (Parker, Richard, Caleb, Sankait)\n
    </string>
    <string name="sources"><center><b>Assets</b></center>\n<b>Main Logo Tire vector image:</b>\nClipartFest.com
        \n<b>Main Logo Font:</b>\nhttp://www.dafont.com/carbon.font
        \n<b>Main Screen Earth Image:</b>\nhttp://www.tooopen.com/view/905025.html
        \n<b>Main menu background Image:</b>\nhttp://www.tooopen.com/view/882842.html</string>
    <string name="cars_available">Cars Available:</string>
    <string name="add_a_new_car">Add a new Car</string>
    <string name="journeys_delete">Please long click on a journey to delete it</string>
    <string name="tips_resource_reference">Tips Resource Reference:</string>
    <string name="https_carbonfund_org_reduce">https://carbonfund.org/reduce/</string>
    <string name="https_goo_gl_ucvse">https://goo.gl/UCVSe</string>
    <string name="https_carbonfund_org_how_we_calculate">https://carbonfund.org/how-we-calculate/</string>
    <string name="carbon_emission_calculate_resource">Carbon Emission Calculate Resource:</string>
    <string name="your_co2_emission_details">Your CO2 Emission details</string>
    <string name="date_of_journey">Date of Journey</string>
    <string name="please_select_a_date_by_clicking_button_below">Please select a date by clicking button below</string>
    <string name="enter_more_journey">Enter More Journey!</string>
    <string name="youve_entered_x_journeys_today_wanna_more">You\'ve entered %1$d journeys today. Want to add more?</string>
    <string name="enter_new_bill">Enter New Bill!</string>
    <string name="you_havent_entered_any_bill_in_last_45_days">"You haven\'t entered any bill in last 45 days. Would you like to enter one now?"</string>
    <string name="enter_more_journeys">Enter More Journeys</string>
    <string name="good_your_footprint_is_below_avg">Good! Your footprint today is below average. Do you want to enter more Journeys?</string>
    <string name="enter_a_journey">Enter A Journey!</string>
    <string name="you_havent_entered_any_journey_today">You haven\'t entered any journey today. Would you like to enter one now?</string>
    <string name="good_evening">"Good Evening!"</string>
    <string name="would_you_like_to_review">Good evening. Would you like to add footprint today?</string>
    <string name="filterPrompt">Please choose each of the attributes above to filter among all the cars we know.</string>
    <string name="car_year">Car Year:</string>
    <string name="car_model">Car Model:</string>
    <string name="search_this_car">Search this Car</string>
    <string name="cancel">Cancel</string>
    <string name="month">Month:</string>
    <string name="day">Day:</string>
    <string name="confirm">CONFIRM</string>
    <string name="done">Done</string>
    <string name="in_kilometers">in kilometers</string>
    <string name="highway_distance">Highway Distance:</string>
    <string name="city_distance_travelled">City Distance Travelled:</string>
    <string name="name">name</string>
    <string name="route_name">Route Name:</string>
    <string name="natural_gas_consumption">Natural Gas Consumption:</string>
    <string name="natural_gas_bill_cost">Natural Gas Bill Cost:</string>
    <string name="start_date_of_bill">Start Date of Bill:</string>
    <string name="end_date_of_bill">End Date of Bill:</string>
    <string name="number_of_households">Number of Households:</string>
    <string name="electricity_consumption">Electricity Consumption:</string>
    <string name="electric_bill_cost">Electric Bill Cost:</string>
    <string name="show_tips">SHOW TIPS</string>
    <string name="select_a_date">Select A Date</string>
    <string name="choose_a_transport_method">Choose a transport method:</string>
    <string name="next">Next</string>
    <string name="we_found_0_cars_in_out_database">We found </string>
    <string name="we_found_2"> Cars in out database.</string>
    <string name="route_information">Route Information:</string>
    <string name="total_carbon_emissions">Total Carbon Emissions:</string>
    <string name="save">SAVE</string>
    <string name="mode_of_transportation">Mode of Transportation:</string>
    <string name="set_date">SET DATE</string>
    <string name="loading_files">Loading Files...</string>
    <string name="begin">Begin</string>
    <string name="view_journeys">VIEW JOURNEYS</string>
    <string name="view_utilities">VIEW UTILITIES</string>
    <string name="view_tips_history">VIEW TIPS HISTORY</string>
    <string name="view_footprint">VIEW FOOTPRINT</string>
    <string name="about2">About</string>
    <string name="settings">Settings</string>
    <string name="you_selected">You selected:</string>
    <string name="done2">Done</string>
    <string name="car_name">Car Name</string>
    <string name="edit_selected_route">Edit Selected Route</string>
    <string name="settings2">Settings</string>
    <string name="carbon_amount_units">Carbon Amount Units:</string>
    <string name="save2">SAVE</string>
    <string name="tip_history">TIP HISTORY</string>
    <string name="back">BACK</string>
    <string name="please_select_a_bill_to_edit_it_press_and_hold_to_delete">Please select a bill to edit it, press and hold to delete:</string>
    <string name="add_bill">ADD BILL</string>
    <string name="add_a_journey">Add a Journey</string>
    <string name="manage_journeys">Manage Journeys</string>
    <string name="car_name_here">Car Name Here</string>
    <string name="car_spec">Car Spec</string>
    <string name="route_name_here">Route Name Here</string>
    <string name="choose_car_icon">Choose car icon:</string>
    <string name="icon1">Icon 1</string>
    <string name="icon2">Icon 2</string>
    <string name="icon3">Icon 3</string>
    <string name="icon4">Icon 4</string>
    <string name="icon5">Icon 5</string>
    <string name="enterValidName">Please enter a valid name.</string>
    <string name="hint">Hint</string>
    <string name="sure_to_save">Sure to save ?</string>
    <string name="travelled_by_bus">Travelled by Bus</string>
    <string name="travelled_by_skytrain">Tavelled by Skytrain</string>
    <string name="it_takes_over_200_tree_day_to_compensate">It takes over 200 tree-day to compensate for the CO2 emitted</string>
    <string name="it_takes_less_than_0_1_tree_day_to_compensate">It takes less than 0.1 tree-day to compensate for the CO2 emitted.</string>
    <string name="it_takes_over_200_tree_yr_to_compensate">It takes over 200 tree-year to compensate for the CO2 emitted.</string>
    <string name="it_takes_less_than_0_1_tree_yr_to_compensate">It takes less than 0.1 tree-year to compensate for the CO2 emitted.</string>
    <string name="tips2">Alternatives to driving. When possible, walk or ride your bike in order to avoid carbon emissions completely. Carpooling and public transportation drastically reduce CO2 emissions by spreading them out over many riders.</string>
    <string name="tips3">Studies have shown up to 30% of the difference in miles per gallon (MPG) is due to driving habits alone. You could save more than a ton of CO2 per year by:Anticipating your stops and starts,Maintaining a steady speed,Accelerating slowly and smoothly,Driving the speed limit</string>
    <string name="tips5">Your car have a large car age, please replace your air, oil and fuel filters according to schedule.</string>
    <string name="tips7">You took bus, good move to protect our earth! Good for you!</string>
    <string name="tips8">Walk for earth, for your health! Good for you!</string>
    <string name="tips9">Skytrain is a clean transMode, good for you!</string>
    <string name="tips">Tips</string>
    <string name="skip_tips">skip Tips</string>
    <string name="next_tip">Next Tip</string>
    <string name="pls_enter_a_valid_name">Please enter a valid name.</string>
    <string name="pls_select_a_route_to_delete">Please select a Route to delete.</string>
    <string name="pls_select_a_route">Please select a route</string>
    <string name="pls_select_a_route_to_edit">Please select a Route to edit.</string>
    <string name="are_you_sure_you_want_to_delete_selected_bill">Are you sure you want to delete the selected bill?</string>
    <string name="current_date_yy_mm_dd_if_you_want_to_change">Current date is %1$d/%2$d/%3$d.If you want to change date, Please click button below</string>
    <string name="now_the_date_is">Now the date is Year : %1$d Month: %2$d Day: %3$d</string>
    <string name="it_takes_x_tree_day">It takes %1$d tree-day to compensate for the CO2 emitted</string>
    <string name="it_takes_x_tree_yr">It takes %1$d tree-year to compensate for the CO2 emitted</string>
    <string name="x_kg_of_co2">%1$f kg of CO2</string>
    <string name="tips1">"Your car model is %1$s, It is a high carbon vehicle,a low carbon vehicle would be better choice."</string>
    <string name="tips4">"Your total driving distance is %1$fkm, In long distance driving,keep your tires properly inflated (just this can save 400-700 pounds of CO2 per year).</string>
    <string name="tips6">"Your total driving distance is %1$fkm. Just walk, for earth, for your health."</string>
    <string name="tips10">"Your highway distance is %1$fkm and your city distance is %2$fkm, you should know that highway driving saving more energy than the city way"</string>
    <string name="showtime">"Year :%1$d Month:%1$d Day:%1$d</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete %1$s?"</string>
    <string name="selOps">Please choose one of the options below:</string>
    <string name="delete"> Delete</string>
    <string name="edit"> Edit</string>
    <string name="options"> Options</string>
    <string name="enterStartDateEndDate">Please enter a start and end date</string>
    <string name="ElecCost">Your electric Cost is</string>
    <string name="dollar">dollar , and your electric Usage is</string>
    <string name="kwHLed">KwH, LED lights contain no harmful materials and provide the same amount of light as a 60-watt incandescent, using up to 85 percent less power.</string>
    <string name="DOLeLUSAGE">dollar , and your electric Usage is</string>
    <string name="ELECcOSTIS">Your electric Cost is</string>
    <string name="ELECuSAGE">Your electric Usage is</string>
    <string name="kwhProg">kwh, Programmable thermostat – Costs about $50 or less and will save you that much or more in the first year.</string>
    <string name="costs">kwh, Programmable thermostat – Costs about $50 or less and will save you that much or more in the first year.</string>
    <string name="elecUsage">Your electric Usage is</string>
    <string name="TIps">Tips</string>
    <string name="skiptips">Skip Tips</string>
    <string name="nextTip">Next Tip</string>
    <string name="walking">Walking</string>
    <string name="car">Car</string>
</resources>