<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="richardshen.carbon_tracker.AddRouteActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/routeDetail"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ARRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/route_name" />

        <EditText
            android:id="@+id/ARRouteNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/ARCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/city_distance_travelled" />

        <EditText
            android:id="@+id/ARCityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/in_kilometers"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/ARHwy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/highway_distance" />

        <EditText
            android:id="@+id/ARHwyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/in_kilometers"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/ARDoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/confirm"
            android:text="@string/done"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ARCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/delete"
            android:text="@string/cancel"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>
