<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="richardshen.carbon_tracker.AddUtilitiesActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_AddUtil_StartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date_of_bill" />

        <EditText
            android:id="@+id/in_AddUtil_StartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"/>

        <TextView
            android:id="@+id/text_AddUtil_EndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date_of_bill" />

        <EditText
            android:id="@+id/in_AddUtil_EndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"/>

        <TextView
            android:id="@+id/text_AddUtil_NumberOfHouseHolds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_households" />

        <EditText
            android:id="@+id/in_AddUtil_NumberOfHouseholds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_AddUtil_ElectricBillCO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electricity_consumption" />

        <EditText
            android:id="@+id/in_AddUtil_ElectricConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/text_AddUtil_ElectricBillCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electric_bill_cost" />

        <EditText
            android:id="@+id/in_AddUtil_ElectricCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/text_AddUtil_GasConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/natural_gas_consumption" />

        <EditText
            android:id="@+id/in_AddUtil_GasConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/text_AddUtil_GasCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/natural_gas_bill_cost" />

        <EditText
            android:id="@+id/in_AddUtil_GasCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_AddUtilities_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/confirm"
            android:text="@string/done"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_AddUtilities_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/delete"
            android:text="@string/cancel"
            android:textSize="30sp" />
    </LinearLayout>
</RelativeLayout>
