<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="richardshen.carbon_tracker.PersonalizeCar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="9dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_selected"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PCCarInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/carNameStr"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/PCCarNameField"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_name"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_car_icon" />

        <Spinner
            android:id="@+id/PCSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/PCDoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/confirm"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/done2"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/PCCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/delete"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>
</RelativeLayout>
