<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="richardshen.carbon_tracker.JourneyFootPrintActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="clip_horizontal"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/your_co2_emission_details"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateOfJourney_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_journey"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="5dp" />

            <TextView
                android:id="@+id/showtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_select_a_date_by_clicking_button_below"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="46dp" />

            <Button
                android:id="@+id/setdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/date_span"
                android:text="@string/set_date"
                android:textSize="20sp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="66dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Journey Icon:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/JFPSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/carInformation_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/mode_of_transportation"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="112dp" />

            <TextView
                android:id="@+id/carInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/routeInformation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_information"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/routeInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/carbonResult_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_carbon_emissions"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carbonEmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <Button
                android:id="@+id/saveDataBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/confirm"
                android:text="@string/save"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/delete"
                android:text="@string/cancel"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
